    hide it in an image (steganography) if you’re coerced to extract it
    will still looks like random pixel data
  - Will keep going even if decryption cannot be verified (until an out
    of memory error - or similar - occurs!)
* Random IV’s (not derived from key)
* Build Slackware package for easy installation
* On Android, display notification of progress

### Fixed For This Release

* Figure out why the Android app doesn’t like Windows encrypted files
  - It wasn’t actually due to Windows, but a subtle bug in the Android
    code
* Fix bug caused by no rc file


encrypt - 2014.06                                         20th July 2014
-----------------

There’s been a lot of (small) changes for this release. Perhaps the most
significant update is the ability to select the cipher mode (the default
was CBC). The most obvious update to the Windows build is the GUI is now
GTK+3 instead of GTK+2, the other major change for Windows is the use of
the latest version of libgcrypt (now inline with GNU/Linux and OS X).

Speaking of OS X, I think that the libgcrypt issue there has been fixed.
(encrypt still works if I remove libgcrypt from Homebrew - if you are an
OS X user please let us know.)

Next is Android: there were a few bugs that were found and have been now
squashed. Specifically the keyboard would disappear when a user tried to
enter a number in the password field. encrypt on Android, has too had an
update to the version of the gnu-crypto library it depends on.  This was
prompted by the way that the CTR mode was broken, and didn’t allow an IV
to be set (and version 2.1.0 does).

Lastly, there were numerous memory leaks plugged, and greater/better use
of the rc file: changing the selected algorithms/mode will be remembered
for the next use (settings take effect immediately).  Windows has better
Explorer integration, and there has been work towards a similar level of
integration on GNU/Linux (but it’s still a work in progress).

