@@ -51,6 +51,7 @@ Changelog
 * Random IV’s (not derived from key)
 * Build Slackware package for easy installation
 * On Android, display notification of progress
+* Store filename even when encrypting a single file
 
 ### Fixed For Latest Release
 
@@ -58,6 +59,8 @@ Changelog
   - It wasn’t actually due to Windows, but a subtle bug in the Android
     code
 * Fix bug caused by no rc file
+* Plugged some memory leaks
+* Better support for en/decrypting from/to a directory
 
 TODO
 ----
